# alfred

./: .gitignore  Cargo.toml  README.md  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  commands.md  configuration.md  daemon.md  getting-started.md  tutorial.md
src/: config.rs  daemon_client.rs  git.rs  lib.rs  llm.rs  main.rs  ui.rs
src/cli/commands/: branch.rs  commit.rs  config.rs  daemon.rs  help.rs  mod.rs  rebase.rs  resolve.rs  setup.rs
