[package]
name = "alfred"
version = "0.0.1"
edition = "2021"
description = "AI-powered git workflow assistant"
license = "MIT"

[lib]
name = "alfred"
path = "src/lib.rs"

[[bin]]
name = "alfred"
path = "src/main.rs"

[[bin]]
name = "alferd"
path = "src/bin/alferd.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "signal"] }
llama-cpp-2 = "0.1"
colored = "2"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
indicatif = "0.17"
dirs = "5"
anyhow = "1"
futures-util = "0.3"
zip = "2"
once_cell = "1"
ctrlc = "3"

[profile.release]
lto = true
strip = true
